--- a/src/DisplayPayment.form
+++ b/src/DisplayPayment.form
@@ -1,150 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="DisplayPayment">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="20" y="23" width="1160" height="1259"/>
+      <xy x="20" y="20" width="657" height="508"/>
     </constraints>
     <properties>
       <background color="-1197159"/>
     </properties>
-    <border type="none" title=""/>
+    <border type="none"/>
     <children>
-      <grid id="f10eb" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="da0d2" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1197159"/>
+        </properties>
+        <border type="none" title="Customer Details"/>
+        <children>
+          <component id="dd75e" class="javax.swing.JLabel" binding="labelName">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Name : "/>
+            </properties>
+          </component>
+          <component id="25d3" class="javax.swing.JLabel" binding="labelDisplayName">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="daef1" class="javax.swing.JLabel" binding="labelEmail">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Email Address : "/>
+            </properties>
+          </component>
+          <component id="d7284" class="javax.swing.JLabel" binding="labelDisplayEmail">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="ddcfd" class="javax.swing.JLabel" binding="labelContact">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Contact Number: "/>
+            </properties>
+          </component>
+          <component id="47a53" class="javax.swing.JLabel" binding="labelDisplayContact">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="576ff" class="javax.swing.JLabel" binding="labelAddress">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Address :"/>
+            </properties>
+          </component>
+          <component id="f9802" class="javax.swing.JLabel" binding="labelDisplayAddress">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="294a1" class="javax.swing.JLabel" binding="labelCard">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Card Number: "/>
+            </properties>
+          </component>
+          <component id="c84a3" class="javax.swing.JLabel" binding="labelDisplayCard">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+        </children>
+      </grid>
+      <grid id="bde82" binding="menuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="1f335" class="javax.swing.JTable" binding="menuDisplayTable" custom-create="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+        </children>
+      </grid>
+      <grid id="88070" binding="titlePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1197159"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="3ba20" class="javax.swing.JLabel" binding="titleLabel">
+          <component id="bdd15" class="javax.swing.JLabel" binding="labelTitle">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="22" style="1"/>
               <text value="ORDER SUMMARY"/>
             </properties>
           </component>
-          <component id="9bfed" class="javax.swing.JLabel" binding="labelNameTitle">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="1" use-parent-layout="false">
-                <preferred-size width="679" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Name: "/>
-            </properties>
-          </component>
-          <component id="efcb3" class="javax.swing.JLabel" binding="labelDisplayName">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="ef135" class="javax.swing.JLabel" binding="labelCard">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="1" use-parent-layout="false">
-                <preferred-size width="679" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Card Number: "/>
-            </properties>
-          </component>
-          <component id="3a67e" class="javax.swing.JLabel" binding="labelDisplayEmail">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="d164d" class="javax.swing.JLabel" binding="labelDisplayContact">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="759ba" class="javax.swing.JLabel" binding="labelDisplayCard">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="f9de1" class="javax.swing.JLabel" binding="labelAddress">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="1" use-parent-layout="false">
-                <preferred-size width="679" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Address: "/>
-            </properties>
-          </component>
-          <component id="3e604" class="javax.swing.JLabel" binding="labelDisplayAddress">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="be31" class="javax.swing.JLabel" binding="labelContact">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="1" use-parent-layout="false">
-                <preferred-size width="679" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Contact Number: "/>
-            </properties>
-          </component>
-          <component id="ddb82" class="javax.swing.JLabel" binding="labelEmailAddress">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="1" use-parent-layout="false">
-                <preferred-size width="679" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Email Address: "/>
-            </properties>
-          </component>
         </children>
       </grid>
-      <grid id="3afad" binding="menuPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="150" left="500" bottom="500" right="500"/>
+      <component id="48496" class="javax.swing.JButton" binding="confirmOrderButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1197159"/>
+          <text value="Confirm Order"/>
         </properties>
-        <border type="none"/>
-        <children>
-          <component id="7db91" class="javax.swing.JTable" binding="menuDisplayTable" custom-create="true">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <focusable value="false"/>
-              <showHorizontalLines value="false"/>
-              <showVerticalLines value="false"/>
-            </properties>
-          </component>
-          <component id="cf169" class="javax.swing.JButton" binding="confirmOrderButton">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Confirm Order"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
+      </component>
     </children>
   </grid>
 </form>
